# smu-curriculum-flowcharts

./: Makefile  README.md  course_flowchart.py  courses_2014.py  courses_2016.py  courses_2017.py  courses_2018.py  courses_2019.py  courses_2024.py  flowchart_generator.py  pyproject.toml
generic_plans/: _2024_25.py
img/: courses_2016  courses_2017  courses_2017.py  courses_2018  courses_2019  g
old/: courses_2024.py
smume/: colors.py  course_model.py  curriculum.py  flowchart_generator.py  generic_plan.py  graph_builder.py  me_plan_document.py  report.py  student_plan.py  styles.py  utils.py
smume/curricula/: _2024_25.py
smume/img/: courses_2017_legend  courses_2024
student_plans/: ME-Plan-Document.html  student_plan_report.html  test_student.py  test_student_transcript.html
